added userdashboard and store registration

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10903,3 +10903,19 @@ a.text-dark:focus {
   cursor: pointer;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5 {
+  color: grey;
+}
+
+.card-notifier {
+  margin-top: 100px;
+}
+
+.emoji {
+  font-size: 150px;
+}
+
