--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -25,3 +25,70 @@ h1, h2, h3, h4, h5{
 .emoji{
     font-size: 150px;
 }
+
+.dashHeader{
+    font-size: 40px;
+}
+.discover{
+    font-weight: bold;
+}
+.daily{
+    font-weight: 300;
+}
+.cartName{
+    font-size: 40px;
+    color: white;
+    font-weight: bold;
+    margin-left: 10px;
+}
+.cart-card{
+    border-radius: 20px;
+    background-color: #5680F3;
+}
+.itemRow{
+    background-color: #81A1FF;
+    border-radius: 20px;
+    padding: 10px 0px;
+}
+.itemTitle{
+    font-size: 20px;
+    font-weight: bold;
+}
+.img1-container{
+    width: 100%;
+    height: 200px;
+    background-color: violet;
+    border-radius: 20px;
+}
+
+.img1{
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+}
+.img2-container{
+   width: 100%;
+   height: 95px;
+   margin-bottom: 5px;
+}
+.img2{
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+}
+.img3-container{
+    width: 100%;
+    height: 95px;
+    margin-top: 10px;
+ }
+ .img3{
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+}
+.new{
+    font-weight: bold;
+}
+.items{
+    font-weight: 300;
+}
