--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -12,6 +12,10 @@
 @import 'https://cdn.jsdelivr.net/npm/@mdi/font@4.x/css/materialdesignicons.min.css';
 
 
+#app{
+    transition: 0.5s;
+}
+
 .point-me{
     cursor: pointer;
 }
