--- a/public/css/sidebar.css
+++ b/public/css/sidebar.css
@@ -5,6 +5,10 @@
   background-color: dodgerblue !important;
   color: white !important;
 }
+
+a:hover{
+  text-decoration: none !important;
+}
 #sidebar-wrapper {
   min-height: 100vh;
   margin-left: -15rem;
